# fastapi-crud

./: .env.template  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  cart.py  category.py  order.py  product.py  review.py  user.py
app/core/: __init__.py  config.py
app/core/models/: __init__.py  base.py  cart.py  category.py  db_helper.py  order.py  product.py  review.py  user.py
app/core/models/mixins/: __init__.py  created_at.py  int_id_pk.py
app/core/schemas/: __init__.py  cart.py  category.py  order.py  product.py  review.py  user.py
app/core/security/: __init__.py  dependencies.py  hashing.py  roles.py  tokens.py
app/repositories/: __init__.py  base_repo.py  cart.py  category.py  order.py  product.py  review.py  user.py
app/services/: __init__.py  base_service.py  cart.py  category.py  order.py  product.py  review.py  user.py
core/: config.py
core/models/: db_helper.py
